--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,7 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['main']
+    tags: ['*']
   release:
     types: [created]
 
@@ -40,6 +41,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
           flavor: |
             latest=auto
             prefix=
