--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "duckdb>=1.1.3",
+    "streamlit-folium>=0.23.2",
     "streamlit>=1.40.2",
+    "geopandas>=1.0.1",
 ]
