Integrate Streamlit Analytics for enhanced user tracking and analytics
- Added `streamlit-analytics` dependency to track user interactions within the app.
- Implemented tracking start and stop functions in `main.py` to monitor user activity during session.
- Updated `pyproject.toml` and `uv.lock` to include the new analytics package and its specifications.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "streamlit-folium>=0.23.2",
     "streamlit>=1.40.2",
     "geopandas>=1.0.1",
+    "streamlit-analytics>=0.4.1",
 ]
